This file documents the revision history for Perl extension Catalyst.

5.58
        - Improved PAR support
        - Replaced -short with auto-detection
        - Fixed prereqs, added File::Copy::Recursive
        - Static::Simple changes:
            - Made prepare_action play nice with other plugins by not short-
              circuiting.
            - Added tmpl to the ignored extensions.
            - Fixed security problem if req->path contained '..'.

5.57    2005-11-20 22:45:00
        - Updated uri_for to accept undef actions
        - Switched to Module::Install
        - Renamed tests for easier editing
        - Reformatted documentation
        - Renamed -nonew to -force
        - Added PAR support
        - Added keep-alive support and bug fixes to HTTP engine.
          (Sascha Kiefer)
        - Added daemonize option to FastCGI engine. (Sam Vilain)

5.56   2005-11-16 10:33:00
        - Fixed FastCGI engine to not clobber the global %ENV on each
          request. (Sam Vilain)
        - Updated benchmarking to work with detach
        - Fixed dispatcher, so $c->req->action(undef) works again
        - Updated Catalyst::Test to use HTTP::Request::AsCGI
        - Added -pidfile to external FastCGI server.

5.55    2005-11-15 12:55:00
        - Fixed multiple cookie handling

5.54    2005-11-14 22:55:00
        - Fixed a Module::Pluggable::Fast related bug

5.53    2005-11-14 15:55:00
        - Removed t/04prereq.t that was testing for non-required
          modules.

5.52    2005-11-14 10:57:00
        - Strip '..'s in static urls to fix security issue.

5.51    2005-11-14 00:45:00
        - Changed uri_for to use namespace instead of match.

5.50    2005-11-13 20:45:00
        - Fixed minor bugs.
        - Updated docs.

5.49_05 2005-11-12 20:45:00
        - Large update to the documentation. (David Kamholz)
        - Fixed args handling in forward()
        - Fixed forwarding to classes
        - Fixed catalyst.pl-generated Build.PL Makefile section.